--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,18 @@ p {
   font: 1.05em/1.5 quattrocento, Lucida-Sans, sans-serif;
   color:#000000;
 }
+
+li {
+  float: left;
+}
+
+li a {
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav li {
+     margin-top: 0;
+  }
