--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ h1 {
   }
 
 p {
-  font: 1.05em/1.5 quattrocento, Lucida-Sans, sans-serif;
+  font: 1.05em/1.5 quattrocento, sans-serif;
   color:#000000;
 }
 
@@ -27,5 +27,5 @@ nav li {
 
 a {
   color:#12c0dd;
-  font: 1.05em/1.5 Nunito, Lucida-Sans, sans-serif;
+  font: 1.05em/1.5 quattrocento, sans-serif;
 }
