--- a/months/css/main.css
+++ b/months/css/main.css
@@ -1,1 +1,72 @@
+h1 {
+    font: 5em/1.5 el-messiri;
+    color: #000000;
+    text-align: center;
+    padding-bottom: 15px;
+  }
+
+p {
+  font: 1.05em/1.5 quattrocento, sans-serif;
+  color:#000000;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav li {
+     margin-top: 0;
+  }
+
+a {
+  color:#000000;
+  font: 1.05em/1.5 quattrocento, sans-serif;
+}
+
+nav ul {
+  list-style: none url(//:0); /* Remove bullets, without removing semantics */
+  padding-left: 0; /* Remove left padding for flush left appearance */
+}
+
+ nav ul {
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: start;
+    gap: 1rem;
+  }
+
+.box {
+  background: #bfdbf7;
+  padding: 1px;
+}
+
+body {
+  max-width: 80rem;
+  padding: 0 1rem;
+  margin: 1rem auto;
+  background-color:#ffffff;
+}
+
+img {
+  width: auto;
+  max-width: 50%;
+  height: auto;
+  text-align: center;
+}
+
+figure img {
+  border: 1px solid #ccc;
+    float: right;
+    width: 50%;
+    margin-top: 0;
+    margin-left: 1rem;
+    margin-bottom: 0;
+}
 
