--- a/css/main.css
+++ b/css/main.css
@@ -81,4 +81,12 @@ img {
     margin-bottom: 0;
 }
 
+#grid {
+  display: grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+  grid-auto-rows: minmax(14rem, auto);
+  gap: 1rem;
+}
+
 @media (min-width: 20em) {
