--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ img {
 
 #grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+  grid-template-columns: auto auto auto;
   grid-auto-rows: minmax(14rem, auto);
   gap: 1rem;
 }
