--- a/css/main.css
+++ b/css/main.css
@@ -84,8 +84,8 @@ img {
 
 #grid {
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-auto-rows: minmax(14rem, auto);
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-auto-rows: minmax(25rem, auto);
   gap: 1rem;
 }
 
